# 996Server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  test.lua  vcpkg.json
config/: config.lua
configs/: exampleConfig.lua
example/: clusterBoot.lua  clusterNode.json  clusterReceiver.lua  clusterSender.lua  clusterWeb.lua  consoleBoot.lua  hotfixBoot.lua  hotfixMod.lua  repeatRequre.lua
example/configs/: clusterReceiver.lua  clusterReceiverCfg.lua  clusterSender.lua  clusterSenderCfg.lua  clusterWebCfg.lua  consoleCfg.lua  hotfixCfg.lua
example/services/: clusterReceiver.lua  clusterReceiverServ.lua  clusterSender.lua  clusterSenderServ.lua  clusterWeb.lua  hotfixTestServ.lua
lualib/: api.lua  class.lua  cluster.lua  configMgr.lua  crypto.lua  fs.lua  hotfix.lua  http.lua  json.lua  mysql.lua  proto.lua  redis.lua  tcp.lua  uuid.lua  websocket.lua
lualib/db/: mysql.lua  redis.lua
lualib/net/: http.lua  tcp.lua  websocket.lua
services/: clusterServ.lua  consoleServ.lua  testService.lua  testService2.lua
shell/: buildDebug.bat  buildDebug.sh  buildRelease.bat  buildRelease.sh  runClusterExample.bat
src/: define.hpp  main.cpp
src/config/: configMgr.cpp  configMgr.hpp  luaConfig.cpp
src/crypto/base64/: base64.cpp
src/crypto/chacha/: chacha.cpp
src/crypto/rsa/: rsa.cpp
src/crypto/sha/: sha.cpp
src/crypto/util/: util.cpp  util.hpp
src/encode/: encode.cpp  encode.hpp
src/fs/: fs.cpp
src/http/client/: httpClientMgr.cpp  httpClientMgr.hpp  luaHttpClient.cpp
src/http/server/: httpServer.cpp  httpServerMgr.cpp  httpServerMgr.hpp  httpSever.hpp  luaHttpServer.cpp
src/json/: json.cpp
src/log/: log.cpp
src/lua/: luaApi.cpp  luaApi.hpp
src/protobuf/: protobuf.cpp
src/service/: luaService.cpp  service.cpp  service.hpp  serviceMgr.cpp  serviceMgr.hpp
src/service/msg/: serviceMsg.cpp  serviceMsg.hpp  serviceMsgPool.cpp  serviceMsgPool.hpp
src/socket/tcp/client/: luaTcpClient.cpp  tcpClient.cpp  tcpClient.hpp  tcpClientMgr.cpp  tcpClientMgr.hpp
src/socket/tcp/server/: luaTcpServer.cpp  tcpServer.cpp  tcpServer.hpp  tcpServerMgr.cpp  tcpServerMgr.hpp
src/socket/tcp/session/: tcpSession.cpp  tcpSession.hpp
src/sql/mysql/: mysql.cpp
src/sql/redis/: redis.cpp
src/uuid/: uuid.cpp
src/websocket/server/: luaWebsocketServer.cpp  websocketServer.cpp  websocketServer.hpp  websocketServerMgr.cpp  websocketServerMgr.hpp
src/worker/: worker.cpp  worker.hpp  workerMgr.cpp  workerMgr.hpp
src/xml/: xml.cpp
